--- a/BUENFESTPROYECTO/WebContent/WEB-INF/web.xml
+++ b/BUENFESTPROYECTO/WebContent/WEB-INF/web.xml
@@ -17,6 +17,6 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>SERVLET</servlet-name>
-    <url-pattern>/Admin*</url-pattern>
+    <url-pattern>//*</url-pattern>
   </servlet-mapping>
 </web-app>
