--- a/BUENFESTPROYECTO/WebContent/WEB-INF/web.xml
+++ b/BUENFESTPROYECTO/WebContent/WEB-INF/web.xml
@@ -24,4 +24,11 @@
     <servlet-name>SERVLET</servlet-name>
     <url-pattern>//*</url-pattern>
   </servlet-mapping>
+   <resource-ref>
+      <description>DB Connection</description>
+      <res-ref-name>jdbc/BuenFestJDBC</res-ref-name>
+      <res-type>javax.sql.DataSource</res-type>
+      <res-auth>Container</res-auth>
+  </resource-ref>
+  
 </web-app> 
